k8s/appserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appserver
  namespace: didthis
spec:
  selector:
    app: appserver
  ports:
    - port: 80
      targetPort: 3000
